tools/tests/errors/surf_num_14.ki
# fmod with a zero divisor is a math domain error.
var m = import("math")
discard m.fmod(5, 0)
